<resources>
    <string name="app_name">News app</string>
    <string name="news">Новости</string>
    <string name="places">Места</string>
    <string name="movies">Фильмы</string>
    <string name="trailer_error">Ошибка загрузки</string>
    <string name="title_activity_trailer">TrailerActivity</string>
    <string name="watch_trailer">Посмотреть трейлер</string>
    <string name="movie_starts">В главных ролях:</string>
    <string name="movie_description">Краткое описание</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">Адрес</string>
    <string name="about_app">О приложении</string>
    <string name="extra">Дополнительно</string>
    <string name="owner">Создатель: Вася Пупкин</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>